--- a/flipping card/index.html
+++ b/flipping card/index.html
@@ -1,5 +1,6 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 <body>
   <section class="section-wrapper">
